--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,84 @@
-anaconda-anon-usage @ file:///home/task_175762568762291/conda-bld/anaconda-anon-usage_1757625705334/work
-anaconda-auth @ file:///home/task_175994313587130/conda-bld/anaconda-cloud-auth-split_1759943195502/work
-anaconda-cli-base @ file:///home/task_176069795959605/conda-bld/anaconda-cli-base_1760698232645/work
-annotated-types @ file:///work/perseverance-python-buildout/croot/annotated-types_1728386958747/work
-anyio==4.11.0
-archspec @ file:///home/task_175812491784513/conda-bld/archspec_1758124989039/work
-aria==0.4.5
-aria2==0.0.1b0
-boltons @ file:///croot/boltons_1751383775419/work
-brotlicffi @ file:///croot/brotlicffi_1736182461069/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1762976168352/work/certifi
-cffi @ file:///home/task_176009805548162/conda-bld/cffi_1760098067589/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click @ file:///croot/click_1744271578095/work
-conda @ file:///home/task_176045791080537/conda-bld/conda_1760457922380/work/conda-src
-conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1755883788794/work
-conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1755123313635/work
-conda-content-trust @ file:///work/perseverance-python-buildout/croot/conda-content-trust_1728487058234/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1745607008911/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1751307506088/work
-cryptography @ file:///home/task_176010605113983/conda-bld/cryptography-split_1760106309120/work
-distro @ file:///work/perseverance-python-buildout/croot/distro_1728396110052/work
-filelock==3.20.0
-frozendict @ file:///work/perseverance-python-buildout/croot/frozendict_1728497542215/work
-fsspec==2025.10.0
-h11==0.16.0
-hf-xet==1.2.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface_hub==1.1.4
-idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
-jaraco.classes @ file:///croot/jaraco.classes_1755516327832/work
-jaraco.context @ file:///io/perseverance-python-buildout/croot/jaraco.context_1731706750665/work
-jaraco.functools @ file:///croot/jaraco.functools_1740408111753/work
-jeepney @ file:///tmp/build/80754af9/jeepney_1627537048313/work
-jsonpatch @ file:///work/perseverance-python-buildout/croot/jsonpatch_1728399595941/work
-jsonpointer @ file:///croot/jsonpointer_1753788433671/work
-keyring @ file:///croot/keyring_1745484691218/work
-libmambapy @ file:///home/task_175762302885340/conda-bld/mamba-split_1757623046707/work/libmambapy
-markdown-it-py @ file:///croot/markdown-it-py_1756299186942/work
-mdurl @ file:///home/task_175855216352428/conda-bld/mdurl_1758552176751/work
-menuinst @ file:///croot/menuinst_1753464582829/work
-modelscope==1.32.0
-more-itertools @ file:///home/task_176112148319406/conda-bld/more-itertools_1761121494880/work
-nvidia-ml-py==13.580.82
-nvitop==1.6.0
-packaging @ file:///home/task_176104878999627/conda-bld/packaging_1761049078606/work
-pkce @ file:///work/perseverance-python-buildout/croot/pkce_1728388093137/work
-platformdirs @ file:///croot/platformdirs_1744273042065/work
-pluggy @ file:///croot/pluggy_1733169602837/work
-psutil==7.1.3
-pycosat @ file:///croot/pycosat_1736868416091/work
-pycparser @ file:///home/task_175749564936714/conda-bld/pycparser_1757496040682/work
-pydantic @ file:///home/task_176069749099755/conda-bld/pydantic_1760697502973/work
-pydantic-settings @ file:///home/task_175878416925449/conda-bld/pydantic-settings_1758784193926/work
-pydantic_core @ file:///home/task_176059738185733/conda-bld/pydantic-core_1760597433577/work
-Pygments @ file:///croot/pygments_1744664109463/work
-PyJWT @ file:///io/buildout/croot/pyjwt_1739558969999/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
-python-dotenv @ file:///croot/python-dotenv_1745610241282/work
-PyYAML==6.0.3
-readchar @ file:///home/task_176061336965958/conda-bld/readchar_1760613437376/work
-requests @ file:///croot/requests_1756709366904/work
-rich @ file:///home/task_176037557612320/conda-bld/rich_1760375632000/work
-ruamel.yaml @ file:///croot/ruamel.yaml_1745960305322/work
-ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1745937152469/work
-SecretStorage @ file:///home/task_175793143758247/conda-bld/secretstorage_1757931467244/work
-semver @ file:///croot/semver_1736540782504/work
-setuptools==80.9.0
-shellingham @ file:///work/perseverance-python-buildout/croot/shellingham_1728395303315/work
-sniffio==1.3.1
-tomli @ file:///croot/tomli_1753774587605/work
-tqdm @ file:///croot/tqdm_1738943501192/work
-truststore @ file:///croot/truststore_1753907171582/work
-typer @ file:///home/task_175758067631213/conda-bld/typer_1757580709537/work
-typer-slim==0.20.0
-typing-inspection @ file:///home/task_176061348700415/conda-bld/typing-inspection_1760614166875/work
-typing_extensions @ file:///croot/typing_extensions_1756280817316/work
-urllib3 @ file:///croot/urllib3_1750775463400/work
-uv==0.9.11
-wheel==0.45.1
-zstandard @ file:///home/task_175818846949212/conda-bld/zstandard_1758189073015/work
+anaconda-anon-usage      0.7.3
+anaconda-auth            0.10.0
+anaconda-cli-base        0.5.4
+annotated-types          0.6.0
+anyio                    4.11.0
+archspec                 0.2.5
+aria                     0.4.5
+aria2                    0.0.1b0
+boltons                  25.0.0
+brotlicffi               1.0.9.2
+certifi                  2025.11.12
+cffi                     2.0.0
+charset-normalizer       3.3.2
+click                    8.1.8
+conda                    25.9.1
+conda-anaconda-telemetry 0.3.0
+conda-anaconda-tos       0.2.2
+conda-content-trust      0.2.0
+conda-libmamba-solver    25.4.0
+conda-package-handling   2.4.0
+conda_package_streaming  0.12.0
+cryptography             46.0.2
+distro                   1.9.0
+filelock                 3.20.0
+frozendict               2.4.2
+fsspec                   2025.10.0
+h11                      0.16.0
+hf-xet                   1.2.0
+httpcore                 1.0.9
+httpx                    0.28.1
+huggingface_hub          1.1.4
+idna                     3.7
+jaraco.classes           3.4.0
+jaraco.context           0.0.0
+jaraco.functools         4.1.0
+jeepney                  0.7.1
+jsonpatch                1.33
+jsonpointer              3.0.0
+keyring                  25.6.0
+libmambapy               2.3.2
+markdown-it-py           4.0.0
+mdurl                    0.1.2
+menuinst                 2.3.1
+modelscope               1.32.0
+more-itertools           10.8.0
+nvidia-ml-py             13.580.82
+nvitop                   1.6.0
+packaging                25.0
+pip                      25.3
+pkce                     1.0.3
+platformdirs             4.3.7
+pluggy                   1.5.0
+psutil                   7.1.3
+pycosat                  0.6.6
+pycparser                2.23
+pydantic                 2.12.2
+pydantic_core            2.41.4
+pydantic-settings        2.10.1
+Pygments                 2.19.1
+PyJWT                    2.10.1
+PySocks                  1.7.1
+python-dotenv            1.1.0
+PyYAML                   6.0.3
+readchar                 4.2.1
+requests                 2.32.5
+rich                     14.2.0
+ruamel.yaml              0.18.10
+ruamel.yaml.clib         0.2.12
+SecretStorage            3.4.0
+semver                   3.0.2
+setuptools               80.9.0
+shellingham              1.5.0
+sniffio                  1.3.1
+tomli                    2.2.1
+tqdm                     4.67.1
+truststore               0.10.1
+typer                    0.17.4
+typer-slim               0.20.0
+typing_extensions        4.15.0
+typing-inspection        0.4.2
+urllib3                  2.5.0
+uv                       0.9.11
+wheel                    0.45.1
+zstandard                0.24.0
